chore: deduplicate .talismanrc entries, keep only latest checksums
Talisman was using the first matching entry per filename and failing when
that first entry had a stale checksum. Remove all duplicate filename
entries, keeping only the most recent checksum for each file.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>